--- a/src/index.html
+++ b/src/index.html
@@ -202,7 +202,7 @@
             </div>
 
             <div class="row">
-                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="false">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div>
@@ -217,25 +217,24 @@
                                             <p class="text-color-light-gray position">Турция, сооснователь, директор по развитию</p>
                                             <p class="font-weight-bold mb-0 description">Предприниматель с 36-летним стажем реального бизнеса. </p>
                                             <p class="description">За плечами опыт работы в таких сферах как: наука и менеджмент крупных бизнес- структур, строительство и продажа недвижимости, инвестиции и Network Marketing, IT и блокчейн. Работал в партнерстве с различными мировыми компаниями и всегда добивался успеха. Имеет личные патенты и ученую степень.</p>
+
+                                            <div class="quotation-box font-size-10">
+                                                <p class="mb-2"><span class="font-weight-bold">Самый большой риск в жизни —</span>
+                                                    никогда не рисковать.</p>
+                                                <p><span class="font-weight-bold"> Осознанный риск —</span>
+                                                    путь к финансовому благополучию</p>
+                                                <p><span class="font-weight-bold"> Осознанный риск —</span>
+                                                    путь к финансовому благополучию</p>
+                                                <p><span class="font-weight-bold"> Осознанный риск —</span>
+                                                    путь к финансовому благополучию</p>
+                                                <p><span class="font-weight-bold"> Осознанный риск —</span>
+                                                    путь к финансовому благополучию</p>
+                                                <p><span class="font-weight-bold"> Осознанный риск —</span>
+                                                    путь к финансовому благополучию</p>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="d-flex flex-row-reverse">
-                                        <div class="col-8 font-size-10">
-                                            <p class="mb-2"><span class="font-weight-bold">Самый большой риск в жизни —</span>
-                                                никогда не рисковать.</p>
-                                            <p><span class="font-weight-bold"> Осознанный риск —</span>
-                                                путь к финансовому благополучию</p>
-                                            <p><span class="font-weight-bold"> Осознанный риск —</span>
-                                                путь к финансовому благополучию</p>
-                                            <p><span class="font-weight-bold"> Осознанный риск —</span>
-                                                путь к финансовому благополучию</p>
-                                            <p><span class="font-weight-bold"> Осознанный риск —</span>
-                                                путь к финансовому благополучию</p>
-                                            <p><span class="font-weight-bold"> Осознанный риск —</span>
-                                                путь к финансовому благополучию</p>
-                                        </div>
-                                        <span class="icon icon-quote"></span>
-                                    </div>
+
                                 </div>
                                 <div class="col-sm col-lg-6 d-flex flex-column">
                                     <div class="d-flex align-items-stretch mb-4">
@@ -247,18 +246,15 @@
                                             <h3 class="font-weight-bold text-name">Людмила Березина</h3>
                                             <p class="text-color-light-gray position">Турция, сооснователь, финансовый директор</p>
                                             <p class="description">Двадцатилетний опыт работы в крупных МЛМ компаниях. Администрировала и управляла финансами трех успешных компаний, а также вела бизнес по продаже недвижимости за рубежом, вклады в выгодные инвестиции, IT и блокчейн. Четкость, порядочность и оперативность — главные черты характера.</p>
+
+                                            <div class="quotation-box font-size-10">
+                                                <p>Не заставляй себя работать на деньги. Они должны работать на тебя, а не ты на них. Будь умнее их, ты - Человек!</p>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="d-flex flex-row-reverse">
-                                        <div class="col-8 font-size-10">
-                                            <p>Не заставляй себя работать на деньги. Они должны работать на тебя, а не ты на них. Будь умнее их, ты - Человек!</p>
-                                        </div>
-                                        <span class="icon icon-quote"></span>
                                     </div>
                                 </div>
                             </div>
                         </div>
-
                         <div class="carousel-item">
                             <div>
                                 <div class="col-sm col-lg-6 d-flex flex-column">
@@ -272,17 +268,24 @@
                                             <p class="text-color-light-gray position">Турция, сооснователь, директор по развитию</p>
                                             <p class="font-weight-bold mb-0 description">Предприниматель с 36-летним стажем реального бизнеса. </p>
                                             <p class="description">За плечами опыт работы в таких сферах как: наука и менеджмент крупных бизнес- структур, строительство и продажа недвижимости, инвестиции и Network Marketing, IT и блокчейн. Работал в партнерстве с различными мировыми компаниями и всегда добивался успеха. Имеет личные патенты и ученую степень.</p>
+
+                                            <div class="quotation-box font-size-10">
+                                                <p class="mb-2"><span class="font-weight-bold">Самый большой риск в жизни —</span>
+                                                    никогда не рисковать.</p>
+                                                <p><span class="font-weight-bold"> Осознанный риск —</span>
+                                                    путь к финансовому благополучию</p>
+                                                <p><span class="font-weight-bold"> Осознанный риск —</span>
+                                                    путь к финансовому благополучию</p>
+                                                <p><span class="font-weight-bold"> Осознанный риск —</span>
+                                                    путь к финансовому благополучию</p>
+                                                <p><span class="font-weight-bold"> Осознанный риск —</span>
+                                                    путь к финансовому благополучию</p>
+                                                <p><span class="font-weight-bold"> Осознанный риск —</span>
+                                                    путь к финансовому благополучию</p>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="d-flex flex-row-reverse">
-                                        <div class="col-8 font-size-10">
-                                            <p class="mb-2"><span class="font-weight-bold">Самый большой риск в жизни —</span>
-                                                никогда не рисковать.</p>
-                                            <p><span class="font-weight-bold"> Осознанный риск —</span>
-                                                путь к финансовому благополучию</p>
-                                        </div>
-                                        <span class="icon icon-quote"></span>
-                                    </div>
+
                                 </div>
                                 <div class="col-sm col-lg-6 d-flex flex-column">
                                     <div class="d-flex align-items-stretch mb-4">
@@ -294,13 +297,11 @@
                                             <h3 class="font-weight-bold text-name">Людмила Березина</h3>
                                             <p class="text-color-light-gray position">Турция, сооснователь, финансовый директор</p>
                                             <p class="description">Двадцатилетний опыт работы в крупных МЛМ компаниях. Администрировала и управляла финансами трех успешных компаний, а также вела бизнес по продаже недвижимости за рубежом, вклады в выгодные инвестиции, IT и блокчейн. Четкость, порядочность и оперативность — главные черты характера.</p>
+
+                                            <div class="quotation-box font-size-10">
+                                                <p>Не заставляй себя работать на деньги. Они должны работать на тебя, а не ты на них. Будь умнее их, ты - Человек!</p>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="d-flex flex-row-reverse">
-                                        <div class="col-8 font-size-10">
-                                            <p>Не заставляй себя работать на деньги. Они должны работать на тебя, а не ты на них. Будь умнее их, ты - Человек!</p>
-                                        </div>
-                                        <span class="icon icon-quote"></span>
                                     </div>
                                 </div>
                             </div>
