--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
 
             <div class="row">
                 <h1 class="font-weight-bold mb-5 text-1">Теперь читай <span class="text-color-purple">внимательно<span class="text-border-purple">внимательно</span></span></h1>
-                <p class="mb-4 col-lg-9 p-0"><strong>King Market Token Sale (KMTS)</strong> — это универсальная платформа для реализации современных технологий микрофинансирования перспективных бизнес проектов, а также продвижения их продуктов на рынки разных стран.</p>
+                <p class="mb-4 col-lg-11 p-0"><strong>King Market Token Sale (KMTS)</strong> — это универсальная платформа для реализации современных технологий микрофинансирования перспективных бизнес проектов, а также продвижения их продуктов на рынки разных стран.</p>
             </div>
 
             <div class="row">
@@ -84,14 +84,6 @@
                     </div>
                 </div>
 
-                <div class="collapse col-sm-11 col-md-10 mb-4" id="collapseBox_1">
-                    <div class="toggle-element">
-                        <p><strong>Выбор перспективного проекта ICO</strong> – это кропотливый и зачастую очень длительный процесс.</p>
-                        <p>Для оптимизации этой задачи, мы привлекли в нашу Компанию лучших аналитиков, имеющих положительный опыт участия в ICO. В итоге, вам будут представлены аналитические отчеты по каждому проекту. На основании этой информации вы сможете принять взвешенное решение. Окончательный выбор, инвестировать в предложенный проект ICO или воздержаться, всегда остается за вами. Но, даже если вы решаете воздержаться от участия в предложенном проекте, вы остаетесь в маркетинге вместе с построенной вами структурой. В этом случае  вы не будете получать реферальные бонусы от работы команды, до оплаты вами одного из пакетов. Также, мы всегда предупреждаем, что работаем на рынке больших рисков, где можно как хорошо заработать, так и потерять деньги. При этом, Администрация Компании будет делать все возможное, чтобы минимизировать эти риски. Но вы должны понимать, что однозначных гарантий роста цены токенов - Компания  не дает. Мы гарантируем только положенные по маркетингу выплаты</p>
-                        <p><strong>Самый большой риск в жизни</strong>s — не рисковать. Тогда, в вашей жизни точно ничего не изменится к лучшему.</p>
-                    </div>
-                </div>
-
                 <div class="col-sm-11 col-md-6 col-lg-6 mb-3 pr-0">
                     <div class="card">
                         <div class="card-body" data-toggle="collapse" href="#collapseBox_2" role="button" aria-expanded="false" aria-controls="collapseBox_2">
@@ -99,6 +91,14 @@
                             <p class="card-text">Позволяет заработать на приглашении новых инвесторов, и на инвестициях построенной вами структуры во все последующие проекты ICO. Интересно как это работает?</p>
 
                         </div>
+                    </div>
+                </div>
+
+                <div class="collapse col-sm-11 col-md-10 mb-4" id="collapseBox_1">
+                    <div class="toggle-element">
+                        <p><strong>Выбор перспективного проекта ICO</strong> – это кропотливый и зачастую очень длительный процесс.</p>
+                        <p>Для оптимизации этой задачи, мы привлекли в нашу Компанию лучших аналитиков, имеющих положительный опыт участия в ICO. В итоге, вам будут представлены аналитические отчеты по каждому проекту. На основании этой информации вы сможете принять взвешенное решение. Окончательный выбор, инвестировать в предложенный проект ICO или воздержаться, всегда остается за вами. Но, даже если вы решаете воздержаться от участия в предложенном проекте, вы остаетесь в маркетинге вместе с построенной вами структурой. В этом случае  вы не будете получать реферальные бонусы от работы команды, до оплаты вами одного из пакетов. Также, мы всегда предупреждаем, что работаем на рынке больших рисков, где можно как хорошо заработать, так и потерять деньги. При этом, Администрация Компании будет делать все возможное, чтобы минимизировать эти риски. Но вы должны понимать, что однозначных гарантий роста цены токенов - Компания  не дает. Мы гарантируем только положенные по маркетингу выплаты</p>
+                        <p><strong>Самый большой риск в жизни</strong>s — не рисковать. Тогда, в вашей жизни точно ничего не изменится к лучшему.</p>
                     </div>
                 </div>
 
@@ -331,19 +331,19 @@
             </div>
 
             <div class="row presentation-box">
-                <div class="col-md-11 col-lg-6 left-side-box">
+                <div class="col-md-11 col-lg-7 left-side-box">
                     <img src="images/box_5_1.png" class="box-5-image">
                 </div>
                 <div class="col-md-11 col-lg-5">
                     <p>Реклама в мессенджерах содержит в себе большой потенциал.</p>
                     <p>Но существующий инструментарий её управления не отвечает современным требованиям ни по наполнению функциональностью, ни по удобству использования.</p>
                     <p><strong>Мы решили изменить это.</strong></p>
-                    <a class="btn btn-gradient-border font-weight-bold col-8">Смотреть презентацию <span class="icon icon-play text-color-light-gray ml-2 font-size-middle"></span></a>
+                    <a class="btn btn-gradient-border font-weight-bold col-8 col-lg-10">Смотреть презентацию <span class="icon icon-play text-color-light-gray ml-2 font-size-middle"></span></a>
                 </div>
             </div>
 
             <div class="row row-list-item-problem mb-4">
-                <h5 class="col-sm-9 col-md-10 col-lg-7 mb-3 p-0">Платформа UMC призвана решить главные проблемы управления рекламой в рамках единой системы:</h5>
+                <h5 class="col-sm-9 col-md-10 col-lg-9 mb-3 p-0 title-list">Платформа UMC призвана решить главные проблемы управления рекламой в рамках единой системы:</h5>
 
                 <div class="row">
                     <div class="col-md-6 col-lg-4 col-xl-3">
@@ -384,17 +384,18 @@
             </div>
 
             <div class="row mb-3">
-                <h5 class="text-color-light-gray">И ещё сотни похожих...</h5>
+                <h5 class="text-color-light-gray font-weight-bold">И ещё сотни похожих...</h5>
             </div>
 
             <div class="row mb-4">
-                <h4 class="font-weight-bold">Но для этого существуем мы — <br/>
+                <h4 class="font-weight-extra-bold">Но для этого существуем мы — <br/>
                     чтобы найти <span class="text-color-purple text-resolve-problem">решение без компромиссов</span></h4>
             </div>
 
             <div class="row mb-5">
-                <div class="col-md-6 col-lg-5">
-                    <h5>Как мы видим решение</h5>
+                <div class="col-md-6 col-lg-6">
+                    <h5 class="font-weight-semi-bold">Как мы видим решение</h5>
+
                     <ul class="list-style-plus">
                         <li class="mb-3">Единая точка входа для владельцев канала и рекламодателей, что позволяет значительно снизить затраты времени и бюджета на организацию коммуникации</li>
                         <li class="mb-3">Систематизация всей возможной информации, предоставленной владельцами каналов. В данном случае задействуется обширная база от участников экосистемы UMC</li>
@@ -404,8 +405,8 @@
                     </ul>
                 </div>
 
-                <div class="col-md-6 col-lg-7 right-side-box">
-                    <h5>Этапы <span class="font-weight-bold">ICO</span></h5>
+                <div class="col-md-6 col-lg-6 right-side-box">
+                    <h5 class="font-weight-semi-bold">Этапы ICO</h5>
 
                     <div class="col-4 col-md-4 col-lg-4 step-ico active px-0">
                         <h5 class="mb-0 title-step-ico font-weight-bold"><span class="text-color-crimson">1</span> Closed sale</h5>
@@ -433,11 +434,11 @@
 
         <div class="container sixth-panel mb-5">
             <div class="row">
-                <h1 class="text-color-crimson font-weight-bold">Есть свой проект?</h1>
+                <h1 class="text-color-crimson font-weight-bold text-title">Есть свой проект?</h1>
             </div>
 
             <div class="row mb-4">
-                <p class="col-9 text-color-light-gray p-0">Мы предоставляем возможность присоедениться к нам. <br/>
+                <p class="col-9 text-color-light-gray col-lg-11 p-0">Мы предоставляем возможность присоедениться к нам. <br/>
                     Отправьте заявку и наши аналитики ознакомятся с проектом и свяжутся с вами</p>
             </div>
 
@@ -481,7 +482,7 @@
             </div>
 
             <div class="row mb-1">
-                <h5 class="font-weight-bold">Ваша заявка на участие</h5>
+                <h5 class="font-weight-bold title-form">Ваша заявка на участие</h5>
             </div>
 
             <div  class="mb-5">
@@ -513,7 +514,7 @@
                     </div>
 
                     <div class="row d-flex flex-column mb-4">
-                        <button type="button" class="btn btn-gradient-border font-weight-bold col-sm-12 col-md-5 col-lg-3 mb-1">Прикрепить файлы <span class="icon icon-clip ml-2"></span></button>
+                        <a class="btn btn-gradient-border font-weight-bold col-sm-12 col-md-5 col-lg-3 mb-1">Прикрепить файлы <span class="icon icon-clip ml-2"></span></a>
                         <small id="passwordHelpBlock" class="form-text text-muted text-color-light-gray">
                             Это может быть презентация компании,<br/>
                             Публичная оферта, видео и т.д.
@@ -531,12 +532,12 @@
 
         <div class="container seventh-panel mb-5">
             <div class="row d-flex flex-column justify-content-center mb-4">
-                <h1 class="font-weight-bold text-center text-4">А если ты <span class="text-color-purple">инвестор ...</span></h1>
+                <h1 class="font-weight-bold text-4">А если ты <span class="text-color-purple">инвестор ...</span></h1>
                 <p class="text-center ml-5">Тогда у тебя есть отличная возможность поучаствовать в интересных проектах</p>
             </div>
 
             <div class="row">
-                <div class="col-md-11 col-lg-5">
+                <div class="col-md-11 col-lg-6">
                     <ul class="list-style-plus">
                         <li>
                             <div>
@@ -558,7 +559,7 @@
                     </ul>
                 </div>
 
-                <div class="box-image col-md-11 col-lg-7">
+                <div class="box-image col-md-11 col-lg-6">
                     <img src="images/people-4.png">
                     <a class="btn btn-gradient col-9 col-lg-7 ml-5 btn-registration py-2">Зарегистрироваться <span class="icon icon-sign-up ml-3 align-middle"></span></a>
                 </div>
