--- a/src/index.html
+++ b/src/index.html
@@ -514,7 +514,12 @@
                     </div>
 
                     <div class="row d-flex flex-column mb-4">
-                        <a class="btn btn-gradient-border font-weight-bold col-sm-12 col-md-5 col-lg-3 mb-1">Прикрепить файлы <span class="icon icon-clip ml-2"></span></a>
+                        <a class="btn btn-gradient-border font-weight-bold col-sm-12 col-md-5 col-lg-3 mb-1">
+                            <span>Прикрепить файлы</span>
+                            <span class="icon icon-clip ml-2"></span>
+                            <input type="file" class="form-control-file attach-file" id="attachFile">
+                        </a>
+
                         <small id="passwordHelpBlock" class="form-text text-muted text-color-light-gray">
                             Это может быть презентация компании,<br/>
                             Публичная оферта, видео и т.д.
@@ -580,14 +585,14 @@
                 <div class="col-sm-9 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
-                            <div class="p-4 col-sm col-md col-lg">
+                            <div class="p-4 col-sm col-md">
                                 <h6 class="card-title"><span class="gift emerald-crown mr-3"></span>Silver</h6>
                                 <p class="card-text mb-0 text-color-light-gray">Условия</p>
                                 <p class="card-text text-color-light-gray"><span class="font-weight-bold">80 ETH</span> в меньшей команде</p>
                                 <p class="card-text mb-0 text-color-light-gray">Приз</p>
                                 <p class="card-text font-weight-bold">3.2 ETH<span class="font-weight-normal text-color-light-gray">или</span> IPhone X</p>
                             </div>
-                            <div class="col-sm col-lg col-md">
+                            <div class="col-sm col-md">
                                 <img src="images/gift-1.png" class="img-gift"/>
                             </div>
                         </div>
@@ -747,7 +752,7 @@
             </div>
 
             <div class="row">
-                <div class="col-4 p-0">
+                <div class="col-5 col-sm-4 p-0">
                     <div class="col-12 p-0 mb-4">
                         <p class="text-color-light-gray mb-2">Позвоните нам</p>
                         <a><h4 class="font-weight-bold footer-contacts"><span class="text-color-purple">+380 (44)</span> 566-44-99</h4></a>
@@ -757,7 +762,7 @@
                         <a><h4 class="font-weight-bold footer-contacts"><span class="text-color-purple">kingmarket</span>@gmail.com</h4></a>
                     </div>
                 </div>
-                <div class="col-8 media-box">
+                <div class="col-7 col-sm-8 media-box">
                     <p class="text-color-light-gray">Мы в социуме</p>
                     <div class="col-12 d-flex p-0">
                         <div class="col-6 p-0 d-flex align-items-start">
