--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
                         <h1 class="title-big-1 font-weight-bold">Стань королём<br/><span class="text-color-purple">нового рынка</span></h1>
                         <p class="text-color-light-gray p-0 col-lg-7">Рынок ICO - молодой, но динамика его развития впечатляет! Зарабатывать на ICO  можно и нужно! </p>
-                        <a class="btn btn-gradient col-lg-4 col-md-4 col-12" data-toggle="modal" data-target="#howModal">Но как?</a>
+                        <a class="btn btn-gradient col-lg-4 col-sm-4 col-md-4 col-12" data-toggle="modal" data-target="#howModal">Но как?</a>
                     </div>
 
                     <div>
@@ -171,7 +171,7 @@
 
         <div class="container third-panel">
             <div class="row">
-                <div class="col-sm col-md-6 col-lg-6 left-side-box">
+                <div class="col-sm-12 col-md-6 col-lg-6 left-side-box">
                     <div class="d-flex flex-row">
                         <div class="mr-2">
                             <span class="text-color-purple align-top font-weight-bold text-1">25</span>
@@ -185,7 +185,7 @@
                         <img src="images/lion.png" class="box-3-image">
                     </div>
                 </div>
-                <div class="col-sm col-md-6 col-lg-6 right-side-box">
+                <div class="col-sm-12 col-md-6 col-lg-6 right-side-box">
                     <h1 class="text-border-purple text-3 font-weight-bold">Надежность</h1>
                     <p>Мы не создаем и не продаем собственные продукты. Наша задача - найти и отобрать лучшие из лучших проекты ICO и грамотно их прорекламировать на рынках разных стран. Мы ищем программы, которые переводят реальный бизнес на блокчейн технологию. Сам по себе блокчейн позволяет удешевить и упростить многие бизнес процессы и несет прогресс обществу.</p>
                     <p><strong>В этом основа долгосрочности и полезности нашей платформы</strong></p>
@@ -553,7 +553,7 @@
             </div>
 
             <div class="row mb-4">
-                <p class="col-12 col-sm-9 text-color-light-gray col-lg-11 p-0">Мы предоставляем возможность присоедениться к нам. <br/>
+                <p class="col-12 col-sm-12 text-color-light-gray col-lg-11 p-0">Мы предоставляем возможность присоедениться к нам. <br/>
                     Отправьте заявку и наши аналитики ознакомятся с проектом и свяжутся с вами.</p>
             </div>
 
@@ -697,7 +697,7 @@
 
         <div class="container-fluid eighth-panel addition-box">
             <div class="row mb-4 row-card-bonus">
-                <div class="col-sm-9 col-md-6 col-lg-4">
+                <div class="col-sm-11 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm col-md">
@@ -714,7 +714,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-9 col-md-6 col-lg-4">
+                <div class="col-sm-11 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm col-md">
@@ -733,7 +733,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-9 col-md-6 col-lg-4">
+                <div class="col-sm-11 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm col-md">
@@ -752,7 +752,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-9 col-md-6 col-lg-4">
+                <div class="col-sm-11 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm col-md">
@@ -771,7 +771,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-9 col-md-6 col-lg-4">
+                <div class="col-sm-11 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm col-md">
@@ -790,7 +790,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-9 col-md-6 col-lg-4">
+                <div class="col-sm-11 col-md-6 col-lg-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm col-md">
@@ -813,7 +813,7 @@
 
         <div class="container eighth-panel addition-box">
             <div class="group-sign-up mb-4">
-                <a class="btn btn-gradient col-12 col-sm-5 col-md-5 col-lg-3 mr-3">Зарегистрироваться</a>
+                <a class="btn btn-gradient col-12 col-sm-11 col-md-5 col-lg-3 mr-3">Зарегистрироваться</a>
                 <p class="mr-2 mt-4 text-inline">или</p> <a href="" class="btn-lang col-4">Войдите в аккаунт</a>
             </div>
 
@@ -867,7 +867,7 @@
             </div>
 
             <div class="row">
-                <div class="col-12 col-sm-4 col-md-12 col-lg-12 col-xl-4 p-0">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-4 p-0">
                     <div class="col-12 p-0 mb-4">
                         <p class="text-color-light-gray mb-2">Позвоните нам</p>
                         <a><h4 class="font-weight-bold footer-contacts"><span class="text-color-purple">+380 (44)</span> 566-44-99</h4></a>
@@ -877,25 +877,25 @@
                         <a><h4 class="font-weight-bold footer-contacts"><span class="text-color-purple">kingmarket</span>@gmail.com</h4></a>
                     </div>
                 </div>
-                <div class="col-12 col-sm-8 col-md-12 col-lg-12 col-xl-8 media-box">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-8 media-box">
                     <p class="text-color-light-gray">Мы в социуме</p>
 
                     <div class="col-12 col-md-12 p-0 we-are-in-app">
-                        <div class="col-12 col-md-4 col-lg-4 p-0 d-flex align-items-start">
+                        <div class="col-12 col-sm-4 col-md-4 col-lg-4 p-0 d-flex align-items-start">
                             <a href=""><span class="icon icon-social-facebook"></span></a>
                             <div class="ml-2">
                                 <a href="" target="_blank"><p class="font-weight-bold media-link">@kingmarketts</p></a>
                                 <p class="text-color-light-gray views">1 024 читают</p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-4 col-lg-4 p-0 d-flex align-items-start">
+                        <div class="col-12 col-sm-4 col-md-4 col-lg-4 p-0 d-flex align-items-start">
                             <a href="" class="instagram-link"><span class="icon icon-social-instagram"></span></a>
                             <div class="ml-2">
                                 <a href=""><p class="font-weight-bold media-link">@kingmarketts</p></a>
                                 <p class="text-color-light-gray views">2 321 смотрят</p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-4 col-lg-4 p-0 d-flex align-items-start">
+                        <div class="col-12 col-sm-4 col-md-4 col-lg-4 p-0 d-flex align-items-start">
                             <a href=""><span class="icon icon-social-youtube"></span></a>
                             <div class="ml-2">
                                 <a href=""><p class="font-weight-bold media-link">King Market TS</p></a>
@@ -904,14 +904,14 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-12 p-0 we-are-in-app">
-                        <div class="col-12 col-md-4 col-lg-4 p-0 d-flex align-items-start">
+                        <div class="col-12 col-sm-4 col-md-4 col-lg-4 p-0 d-flex align-items-start">
                             <a href="" class="icon icon-vk"><span class="path1"><span class="path2"></span></span></a>
                             <div class="ml-2">
                                 <a href=""><p class="font-weight-bold media-link">/king_marketts</p></a>
                                 <p class="text-color-light-gray views">1 024 читают</p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-4 col-lg-4 p-0 d-flex align-items-start">
+                        <div class="col-12 col-sm-4 col-md-4 col-lg-4 p-0 d-flex align-items-start">
                             <a href=""><span class="icon icon-telegram"></span></a>
                             <div class="ml-2">
                                 <a href=""><p class="font-weight-bold media-link">@KingMarketTS</p></a>
