--- a/src/index.html
+++ b/src/index.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
 
-            <div class="row mb-3">
+            <div class="row mb-3 row-card">
                 <div class="card-deck col-md-12">
                     <div class="card col-md-6 col-lg-6">
                         <div class="card-body ">
@@ -128,7 +128,7 @@
                 </div>
             </div>
 
-            <div class="row mb-3">
+            <div class="row mb-3 row-card">
                 <div class="card-deck col-lg-12 ">
                     <div class="card col-sm-12 col-md-6 col-lg-6 card-bonus">
                         <div class="card-body">
@@ -147,7 +147,7 @@
                 </div>
             </div>
 
-            <div class="row mb-5">
+            <div class="row mb-5 row-card">
                 <div class="card-deck col-lg-12">
                     <div class="card col-md-6 col-lg-6">
                         <div class="card-body">
@@ -629,7 +629,7 @@
                     </div>
 
                     <div class="row d-flex flex-column mb-4">
-                        <a class="btn btn-gradient-border font-weight-bold col-sm-12 col-md-5 col-lg-5 col-xl-3 mb-1">
+                        <a class="btn btn-gradient-border font-weight-bold col-sm-12 col-md-5 col-lg-5 col-xl-5 mb-1">
                             <span>Прикрепить файлы</span>
                             <span class="icon icon-clip ml-2"></span>
                             <input type="file" class="form-control-file attach-file" id="attachFile">
@@ -642,7 +642,7 @@
                     </div>
 
                     <div class="row d-flex flex-column">
-                        <button type="button" class="btn btn-gradient col-sm-12 col-lg-5 col-xl-5 mb-4">Отправить заявку</button>
+                        <button type="button" class="btn btn-gradient col-sm-12 col-lg-5 col-xl-6 mb-4">Отправить заявку</button>
                         <p class="text-color-light-gray">Рассмотрение заявки происходит в течении <sapn class="font-weight-bold">1-2 недель</sapn></p>
                     </div>
                 </form>
@@ -697,7 +697,7 @@
 
         <div class="container-fluid eighth-panel addition-box">
             <div class="row mb-4 row-card-bonus">
-                <div class="col-sm-11 col-md-6 col-lg-4">
+                <div class="col-sm-11 col-md-6 col-lg-6 col-xl-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm col-md">
@@ -714,7 +714,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-11 col-md-6 col-lg-4">
+                <div class="col-sm-11 col-md-6 col-lg-6 col-xl-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm col-md">
@@ -733,7 +733,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-11 col-md-6 col-lg-4">
+                <div class="col-sm-11 col-md-6 col-lg-6 col-xl-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm col-md">
@@ -752,7 +752,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-11 col-md-6 col-lg-4">
+                <div class="col-sm-11 col-md-6 col-lg-6 col-xl-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm col-md">
@@ -771,7 +771,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-11 col-md-6 col-lg-4">
+                <div class="col-sm-11 col-md-6 col-lg-6 col-xl-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm col-md">
@@ -790,7 +790,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-11 col-md-6 col-lg-4">
+                <div class="col-sm-11 col-md-6 col-lg-6 col-xl-4">
                     <div class="card">
                         <div class="card-body d-flex flex-row p-0">
                             <div class="p-4 col-sm col-md">
@@ -813,7 +813,7 @@
 
         <div class="container eighth-panel addition-box">
             <div class="group-sign-up mb-4">
-                <a class="btn btn-gradient col-12 col-sm-11 col-md-5 col-lg-3 mr-3">Зарегистрироваться</a>
+                <a class="btn btn-gradient col-12 col-sm-11 col-md-5 col-lg-4  col-xl-3 mr-3">Зарегистрироваться</a>
                 <p class="mr-2 mt-4 text-inline">или</p> <a href="" class="btn-lang col-4">Войдите в аккаунт</a>
             </div>
 
