--- a/src/index.html
+++ b/src/index.html
@@ -832,27 +832,88 @@
 
             <div class="row mb-4 box-video">
                 <div class="col-sm">
-                    <div class="card">
-                        <div class="card-body news-1 d-flex align-items-start flex-column bd-highlight">
-                            <div class="mb-auto bd-highlight"><p class="video text-uppercase">видео</p></div>
-                            <div class="bd-highlight"><h2 class="card-text font-weight-bold">Почему аналитики Kings Market <span class="text-color-crimson">настроены позитивно на 2019 год?</span></h2></div>
-                            <div class="bd-highlight"><p>Вчера, 15:30</p></div>
-                        </div>
+                    <img class="iframe-box-video" src="https://img.youtube.com/vi/GAli0Qs2lWU/maxresdefault.jpg" />
+                    <div class="card-body news-1 d-flex align-items-start flex-column bd-highlight">
+                        <div class="mb-auto bd-highlight"><a href="https://www.youtube.com/watch?v=GAli0Qs2lWU" target="_blank"><p class="video text-uppercase">видео</p></a></div>
+                        <div class="bd-highlight"><a href="https://www.youtube.com/watch?v=GAli0Qs2lWU" target="_blank"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></a></div>
+                        <div class="bd-highlight"><p>Вчера, 15:00</p></div>
                     </div>
                 </div>
                 <div class="col-sm">
-                    <div class="card">
-                        <div class="card-body news-2 d-flex align-items-start flex-column bd-highlight">
-                            <div class="mb-auto bd-highlight"><p class="video text-uppercase">видео</p></div>
-                            <div class="bd-highlight"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></div>
-                            <div class="bd-highlight"><p>Вчера, 15:00</p></div>
-                        </div>
+                    <img class="iframe-box-video" src="https://img.youtube.com/vi/d9OqWAYG9t8/maxresdefault.jpg" />
+                    <div class="card-body news-2 d-flex align-items-start flex-column bd-highlight">
+                        <div class="mb-auto bd-highlight"><a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><p class="video text-uppercase">видео</p></a></div>
+                        <div class="bd-highlight"><a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></a></div>
+                        <div class="bd-highlight"><p>Вчера, 15:00</p></div>
                     </div>
                 </div>
             </div>
 
-            <div class="d-flex justify-content-center">
-                <a class="btn btn-gradient-border font-weight-bold col-9 col-sm-6 col-md-5 col-lg-4 mb-1">Больше полезных видео</a>
+            <div class="d-flex justify-content-center" id="more_video_box">
+                <a class="btn btn-gradient-border font-weight-bold col-9 col-sm-6 col-md-5 col-lg-4 mb-1" data-toggle="collapse"
+                   data-target="#moreVideo" aria-expanded="true" aria-controls="moreVideo">Больше полезных видео</a>
+            </div>
+
+            <div id="moreVideo" class="collapse" aria-labelledby="" data-parent="#more_video_box">
+                <div class="row mb-4 box-video">
+                    <div class="col-sm">
+                        <img class="iframe-box-video" src="https://img.youtube.com/vi/-C9iLGaf3tE/maxresdefault.jpg"/>
+                        <div class="card-body news-2 d-flex align-items-start flex-column bd-highlight">
+                            <div class="mb-auto bd-highlight"><a href="https://www.youtube.com/watch?v=-C9iLGaf3tE" target="_blank"><p class="video text-uppercase">видео</p></a></div>
+                            <!--<div class="bd-highlight"><a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></a></div>-->
+                            <!--<div class="bd-highlight"><p>Вчера, 15:00</p></div>-->
+                        </div>
+                    </div>
+
+                    <div class="col-sm">
+                        <img class="iframe-box-video" src="https://img.youtube.com/vi/urnxuNgWIyQ/maxresdefault.jpg" />
+                        <div class="card-body news-2 d-flex align-items-start flex-column bd-highlight">
+                            <div class="mb-auto bd-highlight"><a href="https://www.youtube.com/watch?v=urnxuNgWIyQ" target="_blank"><p class="video text-uppercase">видео</p></a></div>
+                            <!--<div class="bd-highlight"><a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></a></div>-->
+                            <!--<div class="bd-highlight"><p>Вчера, 15:00</p></div>-->
+                        </div>
+                    </div>
+                </div>
+                <div class="row mb-4 box-video">
+
+                    <div class="col-sm">
+                        <img class="iframe-box-video" src="https://img.youtube.com/vi/GKox0_wVpts/maxresdefault.jpg"/>
+                        <div class="card-body news-2 d-flex align-items-start flex-column bd-highlight">
+                            <div class="mb-auto bd-highlight"><a href="https://www.youtube.com/watch?v=GKox0_wVpts" target="_blank"><p class="video text-uppercase">видео</p></a></div>
+                            <!--<div class="bd-highlight"><a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></a></div>-->
+                            <!--<div class="bd-highlight"><p>Вчера, 15:00</p></div>-->
+                        </div>
+                    </div>
+
+                    <div class="col-sm">
+                        <img class="iframe-box-video" src="https://img.youtube.com/vi/R-Cd-ERtrjU/maxresdefault.jpg" />
+                        <div class="card-body news-2 d-flex align-items-start flex-column bd-highlight">
+                            <div class="mb-auto bd-highlight"><a href="https://www.youtube.com/watch?v=R-Cd-ERtrjU" target="_blank"><p class="video text-uppercase">видео</p></a></div>
+                            <!--<div class="bd-highlight"><a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></a></div>-->
+                            <!--<div class="bd-highlight"><p>Вчера, 15:00</p></div>-->
+                        </div>
+                    </div>
+                </div>
+                <div class="row mb-4 box-video">
+
+                    <div class="col-sm">
+                        <img class="iframe-box-video" src="https://img.youtube.com/vi/Zf9Ge3rDa6Y/maxresdefault.jpg" />
+                        <div class="card-body news-2 d-flex align-items-start flex-column bd-highlight">
+                            <div class="mb-auto bd-highlight"><a href="https://www.youtube.com/watch?v=Zf9Ge3rDa6Y" target="_blank"><p class="video text-uppercase">видео</p></a></div>
+                            <!--<div class="bd-highlight"><a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></a></div>-->
+                            <!--<div class="bd-highlight"><p>Вчера, 15:00</p></div>-->
+                        </div>
+                    </div>
+
+                    <div class="col-sm empty-box-video">
+                        <img class="iframe-box-video" src="" />
+                        <div class="card-body news-2 d-flex align-items-start flex-column bd-highlight">
+                            <!--<div class="mb-auto bd-highlight"><a href="https://www.youtube.com/watch?v=Zf9Ge3rDa6Y" target="_blank"><p class="video text-uppercase">видео</p></a></div>-->
+                            <!--<div class="bd-highlight"><a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></a></div>-->
+                            <!--<div class="bd-highlight"><p>Вчера, 15:00</p></div>-->
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
