--- a/src/index.html
+++ b/src/index.html
@@ -534,7 +534,7 @@
                         <hr class="line-ico"/>
                     </div>
 
-                    <div class="col-11 col-md-11 col-lg-11 col-xl-4 step-ico px-0">
+                    <div class="col-11 col-md-11 col-lg-11 col-xl-5 step-ico marg-lft px-0">
                         <h5 class="mb-0 title-step-ico font-weight-bold"><span class="text-color-light-gray">2</span> Open Token Sale</h5>
                         <p class="text-color-light-gray ml-4">с 1 октября 2018 г. - до полной продажи</p>
                     </div>
