--- a/src/index.html
+++ b/src/index.html
@@ -984,7 +984,7 @@
             </div>
 
             <div class="row">
-                <p class="text-color-light-gray p-0">Copyright © 2018. King Market Token Sale</p>
+                <p class="text-color-light-gray copy-style p-0">Copyright © 2018. King Market Token Sale</p>
             </div>
 
         </div>
