--- a/src/index.html
+++ b/src/index.html
@@ -832,15 +832,16 @@
 
             <div class="row mb-4 box-video">
                 <div class="col-sm">
-                    <img class="iframe-box-video" src="https://img.youtube.com/vi/GAli0Qs2lWU/maxresdefault.jpg" />
+                    <a href="https://www.youtube.com/watch?v=GAli0Qs2lWU" target="_blank"><img class="iframe-box-video" src="https://img.youtube.com/vi/GAli0Qs2lWU/maxresdefault.jpg" /></a>
                     <div class="card-body news-1 d-flex align-items-start flex-column bd-highlight">
+                        <a href="https://www.youtube.com/watch?v=GAli0Qs2lWU" target="_blank"></a>
                         <div class="mb-auto bd-highlight"><a href="https://www.youtube.com/watch?v=GAli0Qs2lWU" target="_blank"><p class="video text-uppercase">видео</p></a></div>
                         <div class="bd-highlight"><a href="https://www.youtube.com/watch?v=GAli0Qs2lWU" target="_blank"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></a></div>
                         <div class="bd-highlight"><p>Вчера, 15:00</p></div>
                     </div>
                 </div>
                 <div class="col-sm">
-                    <img class="iframe-box-video" src="https://img.youtube.com/vi/d9OqWAYG9t8/maxresdefault.jpg" />
+                    <a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><img class="iframe-box-video" src="https://img.youtube.com/vi/d9OqWAYG9t8/maxresdefault.jpg" /></a>
                     <div class="card-body news-2 d-flex align-items-start flex-column bd-highlight">
                         <div class="mb-auto bd-highlight"><a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><p class="video text-uppercase">видео</p></a></div>
                         <div class="bd-highlight"><a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></a></div>
@@ -857,7 +858,7 @@
             <div id="moreVideo" class="collapse" aria-labelledby="" data-parent="#more_video_box">
                 <div class="row mb-4 box-video">
                     <div class="col-sm">
-                        <img class="iframe-box-video" src="https://img.youtube.com/vi/-C9iLGaf3tE/maxresdefault.jpg"/>
+                        <a href="https://www.youtube.com/watch?v=-C9iLGaf3tE" target="_blank"><img class="iframe-box-video" src="https://img.youtube.com/vi/-C9iLGaf3tE/maxresdefault.jpg"/></a>
                         <div class="card-body news-2 d-flex align-items-start flex-column bd-highlight">
                             <div class="mb-auto bd-highlight"><a href="https://www.youtube.com/watch?v=-C9iLGaf3tE" target="_blank"><p class="video text-uppercase">видео</p></a></div>
                             <!--<div class="bd-highlight"><a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></a></div>-->
@@ -866,7 +867,7 @@
                     </div>
 
                     <div class="col-sm">
-                        <img class="iframe-box-video" src="https://img.youtube.com/vi/urnxuNgWIyQ/maxresdefault.jpg" />
+                        <a href="https://www.youtube.com/watch?v=urnxuNgWIyQ" target="_blank"><img class="iframe-box-video" src="https://img.youtube.com/vi/urnxuNgWIyQ/maxresdefault.jpg" /></a>
                         <div class="card-body news-2 d-flex align-items-start flex-column bd-highlight">
                             <div class="mb-auto bd-highlight"><a href="https://www.youtube.com/watch?v=urnxuNgWIyQ" target="_blank"><p class="video text-uppercase">видео</p></a></div>
                             <!--<div class="bd-highlight"><a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></a></div>-->
@@ -877,7 +878,7 @@
                 <div class="row mb-4 box-video">
 
                     <div class="col-sm">
-                        <img class="iframe-box-video" src="https://img.youtube.com/vi/GKox0_wVpts/maxresdefault.jpg"/>
+                        <a href="https://www.youtube.com/watch?v=GKox0_wVpts" target="_blank"><img class="iframe-box-video" src="https://img.youtube.com/vi/GKox0_wVpts/maxresdefault.jpg"/></a>
                         <div class="card-body news-2 d-flex align-items-start flex-column bd-highlight">
                             <div class="mb-auto bd-highlight"><a href="https://www.youtube.com/watch?v=GKox0_wVpts" target="_blank"><p class="video text-uppercase">видео</p></a></div>
                             <!--<div class="bd-highlight"><a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></a></div>-->
@@ -886,7 +887,7 @@
                     </div>
 
                     <div class="col-sm">
-                        <img class="iframe-box-video" src="https://img.youtube.com/vi/R-Cd-ERtrjU/maxresdefault.jpg" />
+                        <a href="https://www.youtube.com/watch?v=R-Cd-ERtrjU" target="_blank"><img class="iframe-box-video" src="https://img.youtube.com/vi/R-Cd-ERtrjU/maxresdefault.jpg" /></a>
                         <div class="card-body news-2 d-flex align-items-start flex-column bd-highlight">
                             <div class="mb-auto bd-highlight"><a href="https://www.youtube.com/watch?v=R-Cd-ERtrjU" target="_blank"><p class="video text-uppercase">видео</p></a></div>
                             <!--<div class="bd-highlight"><a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></a></div>-->
@@ -897,7 +898,7 @@
                 <div class="row mb-4 box-video">
 
                     <div class="col-sm">
-                        <img class="iframe-box-video" src="https://img.youtube.com/vi/Zf9Ge3rDa6Y/maxresdefault.jpg" />
+                        <a href="https://www.youtube.com/watch?v=Zf9Ge3rDa6Y" target="_blank"><img class="iframe-box-video" src="https://img.youtube.com/vi/Zf9Ge3rDa6Y/maxresdefault.jpg" /></a>
                         <div class="card-body news-2 d-flex align-items-start flex-column bd-highlight">
                             <div class="mb-auto bd-highlight"><a href="https://www.youtube.com/watch?v=Zf9Ge3rDa6Y" target="_blank"><p class="video text-uppercase">видео</p></a></div>
                             <!--<div class="bd-highlight"><a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></a></div>-->
@@ -906,7 +907,7 @@
                     </div>
 
                     <div class="col-sm empty-box-video">
-                        <img class="iframe-box-video" src="" />
+                        <a><img class="iframe-box-video" src="" /></a>
                         <div class="card-body news-2 d-flex align-items-start flex-column bd-highlight">
                             <!--<div class="mb-auto bd-highlight"><a href="https://www.youtube.com/watch?v=Zf9Ge3rDa6Y" target="_blank"><p class="video text-uppercase">видео</p></a></div>-->
                             <!--<div class="bd-highlight"><a href="https://www.youtube.com/watch?v=d9OqWAYG9t8" target="_blank"><h2 class="card-text font-weight-bold">Почему безопасней рассчитывать на эфир <span class="text-color-crimson">чем на биткоин?</span></h2></a></div>-->
